fix: java target version